platform/rook-ceph/operator/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rook-operator-preparation
  namespace: rook-ceph
spec:
  endpointSelector:
    matchLabels:
      k8s:app: rook-ceph-operator
  ingress: []
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: UDP
            - port: '53'
              protocol: TCP
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
            - port: '6443'
              protocol: TCP
